Changed Oilpan references to WrapperTrace references at IDBObserver.

References at IDBObserver are still Oilpan references,
which has a risk to lead unexpected death of IDBObserverCallback.
So I declared and defined TraceWrapper for callback_ at IDBObserver.

Bug: 759425
Change-Id: Ifdb01568cd75d85ae755fe271b8a9a019651b454